--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
 		<script type="text/javascript" src="/public/js/main.js"></script>
 	</head>
 	<body>
+		Тестирование игрового движка
 	</body>
 </html>
