--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
 	<head>
 		<title>Test</title>
 		<meta charset="utf-8" />
+		<!--
 		<script type="text/javascript" src="/node_modules/phaser-ce/build/phaser.min.js"></script>
 		<script type="text/javascript" src="/public/js/main.js"></script>
+		-->
+		<script type="text/javascript" src="/node_modules/requirejs/require.js" data-main="/public/js/main"></script>
 	</head>
 	<body>
 	</body>
